<resources>
    <string name="app_name">English Vocabulary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="english_vietnamese">English - Vietnamese</string>
    <string name="vietnamese_english">Vietnamese - English</string>
    <string name="ev">English - Vietnamese</string>
    <string name="ve">Vietnamese - English</string>
    <string name="game">Game</string>
    <string name="select_language">Select language to display:</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="clear_all">Clear all</string>
    <string name="search">search</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device does not support speech input</string>
    <string name="review">Review</string>
    <string name="action_practice">Practice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topic">Topic</string>
    <string name="dictionary">Dictionary</string>
    <string name="favorite_words">Favorite words</string>
    <string name="recent_words">Recent words</string>
    <string name="my_words">My words</string>
    <string name="settings">SETTINGS</string>
    <string name="remind">Remind</string>
    <string name="languages">Languages</string>
    <string name="network">NETWORK</string>
    <string name="rate">Rate</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="empty_list">List is empty, add a few words to this list</string>
</resources>
