<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_dict"
            android:icon="@drawable/ic_magnifier"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_topic"
            android:title="@string/topic" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star_fill"
            android:title="@string/favorite_words" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_time"
            android:title="@string/recent_words" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_book"
            android:title="@string/my_words" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_remind"
                android:icon="@drawable/ic_calendar"
                android:title="@string/remind" />
            <item
                android:id="@+id/nav_lang"
                android:icon="@drawable/ic_earth_globe"
                android:title="@string/languages" />
        </menu>
    </item>

    <item android:title="@string/network">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_like"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_question"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_information"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
